# linkedin-job-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  tyconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-build.yml  ci-docs.yml  ci-integration.yml  ci-lint.yml  ci-release.yml  ci-test.yml  ci.yml  release.yml
docs/: changelog.md  configuration.md  contributing.md  gen_api.py  index.md  installation.md  usage.md
docs/api/: index.md
docs/dev/: ci-cd.md  refactoring-2026.md  session-2026-01-14-complete.md  session-2026-01-14-ml-analytics.md
docs/overrides/: .gitkeep
docs/overrides/css/: catppuccin-mocha.css  fonts.css
docs/stylesheets/: catppuccin.css
scripts/: stealth_check.py  update_toc.py
src/linkedin_scraper/: __init__.py  __main__.py  cli.py  config.py  consent.py  dashboard.py  tui.py
src/linkedin_scraper/api/: __init__.py  main.py
src/linkedin_scraper/browser/: __init__.py  context.py  human.py  stealth.py
src/linkedin_scraper/cli/: app.py  countries.py  export.py  loop.py  scrape.py  search.py  shared.py  stats.py  tui.py
src/linkedin_scraper/ml/: __init__.py  embeddings.py  export.py  vectorstore.py
src/linkedin_scraper/models/: __init__.py  job.py
src/linkedin_scraper/scrapers/: __init__.py  base.py  detail.py  recommended.py  search.py
src/linkedin_scraper/scrapers/detail/: extractors.py  scraper.py
src/linkedin_scraper/scrapers/search/: countries.py  scraper.py
src/linkedin_scraper/storage/: __init__.py  jobs.py
src/linkedin_scraper/storage/jobs/: __init__.py  exporter.py  index.py  ingest.py  ledger.py  storage.py
src/linkedin_scraper/tui/: actions.py  app.py  constants.py  handlers.py  screens.py  styles.py  widgets.py
src/ljs/: __main__.py  config.py  log.py  logging_config.py
src/ljs/browser/: __init__.py  context.py  human.py  stealth.py
src/ljs/cli/: __init__.py  app.py  countries.py  export.py  loop.py  scrape.py  search.py  shared.py  stats.py  tui.py
src/ljs/models/: __init__.py
src/ljs/scrapers/: __init__.py  base.py  recommended.py
src/ljs/scrapers/detail/: __init__.py  extractors.py  scraper.py
src/ljs/scrapers/search/: __init__.py  scraper.py
src/ljs/storage/: __init__.py
src/ljs/storage/jobs/: exporter.py  index.py  ingest.py  io.py  ledger.py  storage.py  text.py
src/ljs/tui/: __init__.py  app.py  constants.py  handlers.py  typing.py  widgets.py
tests/: conftest.py  test_browser.py  test_browser_context_launch_unit.py  test_browser_context_unit.py  test_browser_human_unit.py  test_cli.py  test_config.py  test_consent.py  test_detail_extractors_core_unit.py  test_detail_extractors_unit.py  test_fakes.py  test_fakes_detail_extractors.py  test_log_unit.py  test_logging_config.py  test_models.py  test_scraper_base_unit.py  test_scraper_detail_unit.py  test_scraper_recommended_unit.py  test_scraper_search_pagination_unit.py  test_scraper_search_unit.py  test_scraper_utils.py  test_scraper_validations_unit.py  test_scrapers.py  test_scrapers_unit.py  test_storage.py  test_storage_behavior_unit.py  test_storage_index_unit.py  test_storage_ledger_index.py  test_storage_ledger_ingest_unit.py  test_storage_ledger_writer_unit.py  test_storage_utils.py  test_tui.py
