# =============================================================================
# PROJECT METADATA
# https://packaging.python.org/en/latest/specifications/pyproject-toml/
# =============================================================================
[project]
name = "linkedin-job-scraper"
version = "0.1.0"
description = "Educational LinkedIn public job ads scraper with stealth capabilities"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
maintainers = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = [
    "automation",
    "educational",
    "jobs",
    "linkedin",
    "playwright",
    "scraper",
    "web-scraping",
]
classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",
    # Environment
    "Environment :: Console",
    # Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    # License
    "License :: OSI Approved :: MIT License",
    # OS
    "Operating System :: OS Independent",
    # Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    # Topics
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    # Typing
    "Typing :: Typed",
]

# -----------------------------------------------------------------------------
# Dependencies (runtime)
# -----------------------------------------------------------------------------
dependencies = [
    "aiofiles>=25.1.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.3.2",
    "textual>=7.5.0",
    "typer>=0.21.1",
]

# -----------------------------------------------------------------------------
# Optional dependencies (dev, docs, test)
# -----------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "linkedin-job-scraper[lint]",
    "linkedin-job-scraper[test]",
    "linkedin-job-scraper[types]",
    "pre-commit>=4.5.1",
]
lint = [
    "ruff>=0.15.0",
]
test = [
    "coverage[toml]>=7.13.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
types = [
    "pyright>=1.1.408",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
]
all = [
    "linkedin-job-scraper[dev]",
    "linkedin-job-scraper[docs]",
]

# -----------------------------------------------------------------------------
# Entry points
# -----------------------------------------------------------------------------
[project.scripts]
linkedin-scraper = "linkedin_scraper.cli:app"

# -----------------------------------------------------------------------------
# URLs
# -----------------------------------------------------------------------------
[project.urls]
Homepage = "https://github.com/yourusername/linkedin-job-scraper"
Documentation = "https://yourusername.github.io/linkedin-job-scraper"
Repository = "https://github.com/yourusername/linkedin-job-scraper.git"
Issues = "https://github.com/yourusername/linkedin-job-scraper/issues"
Changelog = "https://github.com/yourusername/linkedin-job-scraper/blob/main/CHANGELOG.md"

# =============================================================================
# BUILD SYSTEM
# =============================================================================
[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_scraper"]

# =============================================================================
# RUFF - Linter & Formatter
# https://docs.astral.sh/ruff/configuration/
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    "docs",
    "migrations",
]

[tool.ruff.lint]
select = [
    # Core
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    # Imports
    "I",      # isort
    # Naming
    "N",      # pep8-naming
    # Upgrades
    "UP",     # pyupgrade
    # Best practices
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    # Code quality
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    # Performance
    "PERF",   # Perflint
    "FURB",   # refurb
    # Security
    "S",      # flake8-bandit (security)
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "S101",     # Use of assert (fine in tests)
    "S311",     # pseudo-random (fine for browser fingerprinting)
    "S112",     # try-except-continue (intentional in scrapers)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",      # Unused arguments in fixtures
    "PLR2004",  # Magic values in tests
    "S101",     # Assert in tests
]
"src/**/cli.py" = [
    "B008",     # Function call in argument defaults (typer pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["linkedin_scraper"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

# =============================================================================
# PYTEST - Testing Framework
# https://docs.pytest.org/en/stable/reference/customize.html
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=linkedin_scraper",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring browser (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# =============================================================================
# COVERAGE - Code Coverage
# https://coverage.readthedocs.io/en/latest/config.html
# =============================================================================
[tool.coverage.run]
source = ["src/linkedin_scraper"]
branch = true
parallel = true
omit = [
    "*/__main__.py",
    # Integration modules (require Playwright)
    "*/browser/context.py",
    "*/browser/human.py",
    "*/scrapers/base.py",
    "*/scrapers/detail.py",
    "*/scrapers/recommended.py",
    "*/scrapers/search.py",
    # Interactive modules
    "*/tui.py",
    "*/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false
fail_under = 90

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# DEPTRY - Dependency Checker
# https://deptry.com/configuration/
# =============================================================================
[tool.deptry]
extend_exclude = ["docs", "tests"]
ignore = ["DEP002"]
per_rule_ignores = { DEP002 = [
    # Self-references for optional dependency groups
    "linkedin-job-scraper",
    # CLI dev tools (not imported in source code)
    "coverage",
    "mkdocs",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocstrings",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
] }
