# =============================================================================
# PROJECT METADATA
# https://packaging.python.org/en/latest/specifications/pyproject-toml/
# =============================================================================
[project]
name = "linkedin-job-scraper"
version = "0.1.0"
description = "Educational LinkedIn public job ads scraper with stealth capabilities"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "cetincurio" },
]
maintainers = [
    { name = "cetincurio" },
]
keywords = [
    "automation",
    "educational",
    "jobs",
    "linkedin",
    "playwright",
    "scraper",
    "web-scraping",
]
classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",
    # Environment
    "Environment :: Console",
    # Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    # License
    "License :: OSI Approved :: MIT License",
    # OS
    "Operating System :: OS Independent",
    # Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    # Topics
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    # Typing
    "Typing :: Typed",
]

# -----------------------------------------------------------------------------
# Dependencies (runtime)
# -----------------------------------------------------------------------------
dependencies = [
    "aiofiles>=25.1.0,<26.0.0",
    "playwright>=1.58.0,<2.0.0",
    "playwright-stealth>=2.0.1,<3.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "rich>=14.3.2,<15.0.0",
    "textual>=7.5.0,<8.0.0",
    "typer>=0.21.1,<1.0.0",
]

# -----------------------------------------------------------------------------
# Optional dependencies (dev, docs, test)
# -----------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "linkedin-job-scraper[lint]",
    "linkedin-job-scraper[test]",
    "linkedin-job-scraper[types]",
    "prek>=0.3.1,<1.0.0",
]
lint = [
    "ruff>=0.15.0,<1.0.0",
]
test = [
    "coverage[toml]>=7.13.3,<8.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
]
types = [
    "ty>=0.0.15,<1.0.0",
]
docs = [
    "mike>=2.1.0,<3.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-gen-files>=0.6.0,<1.0.0",
    "mkdocs-literate-nav>=0.6.2,<1.0.0",
    "mkdocs-macros-plugin>=1.3.0,<2.0.0",
    "mkdocs-material>=9.7.1,<10.0.0",
    "mkdocs-minify-plugin>=0.8.0,<1.0.0",
    "mkdocstrings[python]>=1.0.2,<2.0.0",
    "zensical>=0.0.21,<1.0.0",
]
all = [
    "linkedin-job-scraper[dev]",
    "linkedin-job-scraper[docs]",
]

# -----------------------------------------------------------------------------
# Dependency groups (local-only; used by `uv run` / `uv sync`)
# -----------------------------------------------------------------------------
[dependency-groups]
docs = [
    "mike>=2.1.0,<3.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-gen-files>=0.6.0,<1.0.0",
    "mkdocs-literate-nav>=0.6.2,<1.0.0",
    "mkdocs-macros-plugin>=1.3.0,<2.0.0",
    "mkdocs-material>=9.7.1,<10.0.0",
    "mkdocs-minify-plugin>=0.8.0,<1.0.0",
    "mkdocstrings[python]>=1.0.2,<2.0.0",
    "zensical>=0.0.21,<1.0.0",
]

# -----------------------------------------------------------------------------
# Entry points
# -----------------------------------------------------------------------------
[project.scripts]
ljs = "ljs.cli:app"

# -----------------------------------------------------------------------------
# URLs
# -----------------------------------------------------------------------------
[project.urls]
Homepage = "https://github.com/cetincurio/linkedin-job-scraper"
Documentation = "https://cetincurio.github.io/linkedin-job-scraper"
Repository = "https://github.com/cetincurio/linkedin-job-scraper.git"
Issues = "https://github.com/cetincurio/linkedin-job-scraper/issues"
Changelog = "https://github.com/cetincurio/linkedin-job-scraper/blob/main/CHANGELOG.md"

# =============================================================================
# BUILD SYSTEM
# =============================================================================
[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["docs"]

[tool.uv.build-backend]
module-name = "ljs"
source-include = [
    "tests/**",
    "CHANGELOG.md",
]

# =============================================================================
# RUFF - Linter & Formatter
# https://docs.astral.sh/ruff/configuration/
# =============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    "docs",
    "migrations",
]

[tool.ruff.lint]
select = [
    # Core
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    # Imports
    "I",      # isort
    # Naming
    "N",      # pep8-naming
    # Upgrades
    "UP",     # pyupgrade
    # Best practices
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    # Code quality
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    # Performance
    "PERF",   # Perflint
    "FURB",   # refurb
    # Security
    "S",      # flake8-bandit (security)
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "S101",     # Use of assert (fine in tests)
    "S311",     # pseudo-random (fine for browser fingerprinting)
    "S112",     # try-except-continue (intentional in scrapers)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",      # Unused arguments in fixtures
    "PLR2004",  # Magic values in tests
    "S101",     # Assert in tests
]

[tool.ruff.lint.isort]
known-first-party = ["ljs"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

# =============================================================================
# PYTEST - Testing Framework
# https://docs.pytest.org/en/stable/reference/customize.html
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=ljs",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring browser (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# =============================================================================
# COVERAGE - Code Coverage
# https://coverage.readthedocs.io/en/latest/config.html
# =============================================================================
[tool.coverage.run]
source = ["src/ljs"]
branch = true
parallel = true
omit = [
    "*/__main__.py",
    # UI wrappers (covered separately by behavior tests; omit from unit coverage).
    "*/cli/*",
    "*/tui/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false
fail_under = 100

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# DEPTRY - Dependency Checker
# https://deptry.com/configuration/
# =============================================================================
[tool.deptry]
extend_exclude = ["docs", "tests"]
ignore = ["DEP002"]
per_rule_ignores = { DEP002 = [
    # Self-references for optional dependency groups
    "linkedin-job-scraper",
    # CLI dev tools (not imported in source code)
    "coverage",
    "mkdocs",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocstrings",
    "ty",
    "prek",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
] }
